* Input handling * UI context + better separation of concerns * Tile/TileMap/TileSet definitions * Precompiled header

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,34 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=1013,38
 Size=550,680
-Collapsed=0
+Collapsed=1
 
 [Window][Hello, world!]
-Pos=74,103
+Pos=54,207
 Size=398,362
 Collapsed=0
+
+[Window][Another Window]
+Pos=60,60
+Size=198,71
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Tile Set]
+Pos=197,291
+Size=387,293
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,19
+Size=1600,881
+Collapsed=0
+
+[Docking][Data]
 
