Removed tileset remove functionality * There are a lot of issues with doing this, and it's out of scope for the time being

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1013,38
+Pos=1047,37
 Size=550,680
 Collapsed=1
 
@@ -24,13 +24,43 @@ Size=520,600
 Collapsed=0
 
 [Window][Tile Set]
-Pos=101,130
+Pos=165,86
 Size=380,640
 Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,19
 Size=1600,881
+Collapsed=0
+
+[Window][##confirm_box]
+Pos=720,410
+Size=160,80
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=517,534
+Size=408,172
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=687,414
+Size=226,71
+Collapsed=0
+
+[Window][confirm_remove_tileset]
+Pos=786,302
+Size=310,48
+Collapsed=0
+
+[Window][Remove TileSet?]
+Pos=645,426
+Size=310,48
+Collapsed=0
+
+[Window][Remove tile set?]
+Pos=651,427
+Size=310,75
 Collapsed=0
 
 [Docking][Data]
