--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,1 @@
-# Xmake cache
-.xmake/
-build/
-
-# MacOS Cache
-.DS_Store
-
-# vscode
-.vscode/
-
-# project files
-vs2019/
-
-# imgui
-imgui.ini
-
-# binary
-*.lnk
-*.exe
-*.res
+/target
